Updating About and 404 pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -82,7 +82,7 @@
             <div *ngFor='let te of textMessages'>
                 <speech-bubble [textMessage]='te'></speech-bubble>
             </div>
-            <p *ngIf='textMessages.length === 0' class='no-chats'>You have not chat history.</p>
+            <p *ngIf='textMessages.length === 0' class='no-chats'>You have no chat history.</p>
         </div>
     </div>
 </div>
