--- a/src/app/shared/components/e404/e404.component.css
+++ b/src/app/shared/components/e404/e404.component.css
@@ -1,10 +1,17 @@
 h1 {
     font-size: 128px;
+    margin-bottom: -4px;
     text-align: center;
 }
 
 p {
     text-align: center;
+}
+
+.lost {
+    display: block;
+    margin: 0 auto;
+    max-width: 200px;
 }
 
 .p-wrapper {
