--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,18 @@
 <div class='row'>
     <div class='col-md-12'>
         <h1>About</h1>
-        <p>Details about this project will go here.</p>
+        <p>
+            The <a href='https://fontawesome.com/v5.15/icons/phone'>phone icon</a> used in the 
+            Call Me Ishmael badge was made available by Font Awesome under a 
+            <a href='https://fontawesome.com/license'>
+                Creative Commons Attribution 4.0 International License
+            </a>.
+        </p>
+        <p>
+            The Moby-Dick illustration is by I.W. Taber and sourced via 
+            <a href='https://commons.wikimedia.org/wiki/File:Moby_Dick_final_chase.jpg'>
+                Wikimedia Commons
+            </a>.
+        </p>
     </div>
 </div>
