--- a/src/app/shared/components/e404/e404.component.html
+++ b/src/app/shared/components/e404/e404.component.html
@@ -4,10 +4,14 @@
     <div class='row'>
         <div class='col-sm-3'></div>
         <div class='col-sm-6'>
+            <img alt='A man is on a small boat staring at an intimidating whale' 
+                 src='assets/images/lost.png' 
+                 class='lost' />
             <p>
                 Uh-oh! Looks like that page doesn't exist. 
                 Click the most relevant link in the navigation menu above to get back into the project.
             </p>
+
         </div>
     </div>
 </div>
