--- a/src/app/no-tabindex/no-tabindex.component.html
+++ b/src/app/no-tabindex/no-tabindex.component.html
@@ -1,6 +1,9 @@
 <div class='row'>
     <div class='col-md-12'>
-        <h1>Angular Event Bindings &amp; HTML Tags</h1>
+        <h1>
+            Angular Event Bindings &amp; HTML Tags<br />
+            <span class='sub'>Without tabindex Labeled On Any Tags</span>
+        </h1>
     </div>
 </div>
 <div class='cmi-wrapper'>
@@ -9,17 +12,14 @@
             <label>Anchor tags</label>
             <div class='row'>
                 <div class='col-6 col-sm-12 p-w-4'>
-                    <a (click)='sendText()'
+                    <a (click)='sendText()' 
                        (keyup.enter)='sendText()'
-                       tabindex='0'
                        class='test-btn'>
                         <span>{{'a' | htmlTag}}</span> (click) and (keyup)
                     </a>
                 </div>
                 <div class='col-6 col-sm-12 p-w-4'>
-                    <a (click)='sendText()'
-                       tabindex='0'
-                       class='test-btn'>
+                    <a (click)='sendText()' class='test-btn'>
                         <span>{{'a' | htmlTag}}</span> (click)
                     </a>
                 </div>
@@ -29,15 +29,14 @@
             <label>Button tags</label>
             <div class='row'>
                 <div class='col-6 col-sm-12 p-w-4'>
-                    <button (click)='sendText()'
+                    <button (click)='sendText()' 
                             (keyup.enter)='sendText()'
                             class='test-btn'>
                         <span>{{'button' | htmlTag}}</span> (click) and (keyup)
                     </button>
                 </div>
                 <div class='col-6 col-sm-12 p-w-4'>
-                    <button (click)='sendText()'
-                            class='test-btn'>
+                    <button (click)='sendText()' class='test-btn'>
                         <span>{{'button' | htmlTag}}</span> (click)
                     </button>
                 </div>
@@ -51,15 +50,12 @@
                 <div class='col-6 col-sm-12 p-w-4'>
                     <div (click)='sendText()'
                          (keyup.enter)='sendText()'
-                         tabindex='0'
                          class='test-btn'>
                         <span>{{'div' | htmlTag}}</span> (click) and (keyup)
                     </div>
                 </div>
                 <div class='col-6 col-sm-12 p-w-4'>
-                    <div (click)='sendText()'
-                         tabindex='0'
-                         class='test-btn'>
+                    <div (click)='sendText()' class='test-btn'>
                         <span>{{'div' | htmlTag}}</span> (click)
                     </div>
                 </div>
@@ -72,7 +68,6 @@
                     <ul class='ul-test'>
                         <li (click)='sendText()'
                             (keyup.enter)='sendText()'
-                            tabindex='0'
                             class='test-btn'>
                             <span>{{'li' | htmlTag}}</span> (click) and (keyup)
                         </li>
@@ -80,9 +75,7 @@
                 </div>
                 <div class='col-6 col-sm-12 p-w-4'>
                     <ul class='ul-test'>
-                        <li (click)='sendText()'
-                            tabindex='0'
-                            class='test-btn'>
+                        <li (click)='sendText()' class='test-btn'>
                             <span>{{'li' | htmlTag}}</span> (click)
                         </li>
                     </ul>
