--- a/src/app/specs/specs.component.css
+++ b/src/app/specs/specs.component.css
@@ -2,24 +2,27 @@ h2 {
     font-size: calc(1.1rem + .9vw)
 }
 
-p.small {
+p.spec-table-footer {
     font-size: 0.8rem;
-    margin-left: 8px;
-}
-
-table.spec-table {
-    width: 100%;
-}
-
-table.spec-table td, table.spec-table th {
-    border: solid 1px #000;
-    padding: 4px;
-}
-
-table.spec-table td {
     text-align: center;
 }
 
-table.spec-table th {
+table.spec-table2 {
+    margin: 0 auto;
+    max-width: 100%;
+    width: 512px;
+}
+
+table.spec-table2 td {
+    border: solid 1px #000;
+    padding: 4px;
+    text-align: center;
+    width: 33.3%;
+}
+
+table.spec-table2 td.left-key {
+    border: solid 1px #000;
     font-size: 0.75em;
+    padding: 4px;
+    text-align: right;
 }
