Update for GitHub Pages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,35 +5,35 @@
             <ul class='tech-badges'>
                 <li>
                     <a href='https://angular.io/'>
-                        <img src='/assets/images/tech-badges/angular.png'
+                        <img src='./assets/images/tech-badges/angular.png'
                              alt='Angular'
                              class='tech-badge' />
                     </a>
                 </li>
                 <li>
                     <a href='https://html.spec.whatwg.org/'>
-                        <img src='/assets/images/tech-badges/html5.png'
+                        <img src='./assets/images/tech-badges/html5.png'
                              alt='HTML5'
                              class='tech-badge' />
                     </a>
                 </li>
                 <li>
                     <a href='https://www.w3.org/Style/CSS/'>
-                        <img src='/assets/images/tech-badges/css3.png'
+                        <img src='./assets/images/tech-badges/css3.png'
                              alt='CSS3'
                              class='tech-badge' />
                     </a>
                 </li>
                 <li>
                     <a href='https://getbootstrap.com/'>
-                        <img src='/assets/images/tech-badges/bootstrap.png'
+                        <img src='./assets/images/tech-badges/bootstrap.png'
                              alt='Bootstrap'
                              class='tech-badge' />
                     </a>
                 </li>
                 <li>
                     <a href='https://www.typescriptlang.org/'>
-                        <img src='/assets/images/tech-badges/ts.png'
+                        <img src='./assets/images/tech-badges/ts.png'
                              alt='TypeScript'
                              class='tech-badge' />
                     </a>
@@ -64,17 +64,17 @@
             <ul class='social-links'>
                 <li>
                     <a href='https://www.github.com/kafkaesc'>
-                        <img src='/assets/images/social/github.png' alt='GitHub' class='soc-icon' />
+                        <img src='./assets/images/social/github.png' alt='GitHub' class='soc-icon' />
                     </a>
                 </li>
                 <li>
                     <a href='https://www.twitter.com/_kafkaesc'>
-                        <img src='/assets/images/social/twitter.png' alt='Twitter' class='soc-icon' />
+                        <img src='./assets/images/social/twitter.png' alt='Twitter' class='soc-icon' />
                     </a>
                 </li>
                 <li>
                     <a href='https://instagram.com/kafkaesc'>
-                        <img src='/assets/images/social/instagram.png' alt='Instagram' class='soc-icon' />
+                        <img src='./assets/images/social/instagram.png' alt='Instagram' class='soc-icon' />
                     </a>
                 </li>
             </ul>
