--- a/src/app/shared/components/e404/e404.component.html
+++ b/src/app/shared/components/e404/e404.component.html
@@ -5,7 +5,7 @@
         <div class='col-sm-3'></div>
         <div class='col-sm-6'>
             <img alt='A man is on a small boat looking up at an intimidating whale' 
-                 src='/assets/images/lost.png' 
+                 src='./assets/images/lost.png' 
                  class='lost' />
             <p>
                 Uh-oh! Looks like that page doesn't exist. 
