--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -4,7 +4,7 @@
         <img (click)='gotoHome()'
              (keyup.enter)='gotoHome()'
              alt='The Call Me Ishmael logo, a phone receiver inside of a shield' 
-             src='/assets/images/call-me-ishmael-shield.png'
+             src='./assets/images/call-me-ishmael-shield.png'
              tabindex='0'
              class='cmi-shield'>
         <span class='top-cmi'>Ishmael</span>
