Updating About and Speces pages

--- a/src/app/specs/specs.component.html
+++ b/src/app/specs/specs.component.html
@@ -13,12 +13,12 @@
         </p>
         <h2>How These Event Handlers Work</h2>
         <p>
-            Both event handlers have straightforward names. The click handler is declared on an 
-            HTML element along with a quoted template statement. Angular event binding will listen 
-            for the element's click event and call the template statement. The keyup.enter event 
-            listener follows the same pattern, with the Angular event binding now listening 
-            for the element's keyup enter event. The standard practice is to call a single 
-            function to handle the event.
+            Both event handlers have straightforward names. The <code>click</code> handler is 
+            declared on an HTML element along with a quoted template statement. Angular event 
+            binding will listen for the element's click event and call the template statement. 
+            The <code>keyup.enter</code> event listener follows the same pattern, with the Angular 
+            event binding now listening for the element's keyup enter event. The standard practice 
+            is to call a single function to handle the event.
         </p>
         <p>
             The following is an example of the click and keyup.enter event handlers.
