--- a/src/app/specs/specs.component.css
+++ b/src/app/specs/specs.component.css
@@ -1,28 +1,28 @@
 h2 {
-    font-size: calc(1.1rem + .9vw)
+  font-size: calc(1.1rem + 0.9vw);
 }
 
 p.spec-table-footer {
-    font-size: 0.8rem;
-    text-align: center;
+  font-size: 0.8rem;
+  text-align: center;
 }
 
 table.spec-table2 {
-    margin: 0 auto;
-    max-width: 100%;
-    width: 512px;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 512px;
 }
 
 table.spec-table2 td {
-    border: solid 1px #000;
-    padding: 4px;
-    text-align: center;
-    width: 33.3%;
+  border: solid 1px #000;
+  padding: 4px;
+  text-align: center;
+  width: 33.3%;
 }
 
 table.spec-table2 td.left-key {
-    border: solid 1px #000;
-    font-size: 0.75em;
-    padding: 4px;
-    text-align: right;
+  border: solid 1px #000;
+  font-size: 0.75em;
+  padding: 4px;
+  text-align: right;
 }
