Opening outside links in new tab.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
     <div class="text-center">
       <ul class="tech-badges">
         <li>
-          <a href="https://angular.io/">
+          <a href="https://angular.io/" rel="noreferrer" target="_blank">
             <img
               src="/assets/images/tech-badges/angular.png"
               alt="Angular"
@@ -13,7 +13,11 @@
           </a>
         </li>
         <li>
-          <a href="https://html.spec.whatwg.org/">
+          <a
+            href="https://html.spec.whatwg.org/"
+            rel="noreferrer"
+            target="_blank"
+          >
             <img
               src="/assets/images/tech-badges/html5.png"
               alt="HTML5"
@@ -22,7 +26,11 @@
           </a>
         </li>
         <li>
-          <a href="https://www.w3.org/Style/CSS/">
+          <a
+            href="https://www.w3.org/Style/CSS/"
+            rel="noreferrer"
+            target="_blank"
+          >
             <img
               src="/assets/images/tech-badges/css3.png"
               alt="CSS3"
@@ -31,7 +39,7 @@
           </a>
         </li>
         <li>
-          <a href="https://getbootstrap.com/">
+          <a href="https://getbootstrap.com/" rel="noreferrer" target="_blank">
             <img
               src="/assets/images/tech-badges/bootstrap.png"
               alt="Bootstrap"
@@ -40,7 +48,11 @@
           </a>
         </li>
         <li>
-          <a href="https://www.typescriptlang.org/">
+          <a
+            href="https://www.typescriptlang.org/"
+            rel="noreferrer"
+            target="_blank"
+          >
             <img
               src="/assets/images/tech-badges/ts.png"
               alt="TypeScript"
@@ -54,13 +66,28 @@
       This project is built Angular using HTML5, CSS3, and TypeScript. Bootstrap
       is installed and utilized for a responsive UI. The full code for this site
       is available on
-      <a href="https://github.com/kafkaesc/Call-Me-Ishmael">GitHub</a>.
+      <a
+        href="https://github.com/kafkaesc/Call-Me-Ishmael"
+        rel="noreferrer"
+        target="_blank"
+        >GitHub</a
+      >.
     </p>
     <p>
       The
-      <a href="https://fontawesome.com/v5.15/icons/phone">phone icon</a> used in
-      the Call Me Ishmael badge was made available by Font Awesome under a
-      <a href="https://fontawesome.com/license">
+      <a
+        href="https://fontawesome.com/v5.15/icons/phone"
+        rel="noreferrer"
+        target="_blank"
+        >phone icon</a
+      >
+      used in the Call Me Ishmael badge was made available by Font Awesome under
+      a
+      <a
+        href="https://fontawesome.com/license"
+        rel="noreferrer"
+        target="_blank"
+      >
         Creative Commons Attribution 4.0 International License </a
       >.
     </p>
@@ -77,7 +104,11 @@
     <div class="text-center">
       <ul class="social-links">
         <li>
-          <a href="https://www.github.com/kafkaesc">
+          <a
+            href="https://www.github.com/kafkaesc"
+            rel="noreferrer"
+            target="_blank"
+          >
             <img
               src="/assets/images/social/github.png"
               alt="GitHub"
@@ -86,7 +117,11 @@
           </a>
         </li>
         <li>
-          <a href="https://www.twitter.com/_kafkaesc">
+          <a
+            href="https://www.twitter.com/_kafkaesc"
+            rel="noreferrer"
+            target="_blank"
+          >
             <img
               src="/assets/images/social/twitter.png"
               alt="Twitter"
@@ -95,7 +130,11 @@
           </a>
         </li>
         <li>
-          <a href="https://instagram.com/kafkaesc">
+          <a
+            href="https://instagram.com/kafkaesc"
+            rel="noreferrer"
+            target="_blank"
+          >
             <img
               src="/assets/images/social/instagram.png"
               alt="Instagram"
