Hotfix for path issue.

--- a/src/app/shared/components/e404/e404.component.html
+++ b/src/app/shared/components/e404/e404.component.html
@@ -6,7 +6,7 @@
     <div class="col-sm-6">
       <img
         alt="A man is on a small boat looking up at an intimidating whale"
-        src="/assets/images/lost.png"
+        src="assets/images/lost.png"
         class="lost"
       />
       <p>
